# folio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
data/: io.github.eriote.Folio.desktop  io.github.eriote.Folio.metainfo.xml
folio/: app.py  database.py  devices.py  paths.py  scanner.py
folio/folio/: __main__.py  devices.py  i18n.py  paths.py  scanner.py
folio/folio/locale/es/LC_MESSAGES/: folio.po
folio/folio/ui/: book_detail.py  device_page.py  discover.py  edit_books.py  reading.py  settings.py  stats.py  window.py
folio/locale/es/LC_MESSAGES/: folio.po
folio/ui/: book_detail.py  device_page.py  edit_books.py  reading.py  settings.py  stats.py  welcome.py  window.py
