[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "folio"
version = "0.1.0"
description = "Personal ebook library manager"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ebooklib",
    "Pillow",
]

[project.scripts]
folio = "folio.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["folio*"]
